style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body {
    background-color: #000;
}

/* ------------------ OPENING VIDEO ---------------------- */
section{
    position: relative;
    width: 100%;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px;
}

section video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    pointer-events: none;
}

/* ----------------------NAV BAR ------------------------- */
header {
    position: sticky;
    top: 0;
    z-index: 1000;
    display: flex;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.8);
}

header a {
    color: #ff88f9;
    font-size: 2em;
    padding: 2px 20px;
    text-decoration: none;
    text-align: center;
    border-radius: 50px;
}

header a:hover {
    transition: 0.7s;
    color: #fff;
    text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;
}

header a:active {
    color: #000;
    background-color: #ff88f9;
}


/* ------------------- MAIN CONTENT ----------------------- */
h1 {
    position: relative;
    text-align: center;
    color: #fff;
    text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
    font-size: 4em;
}

#title-text {
    position: relative;
    align-items: center;
    color: #fff;
    text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;
    font-size: 10em;
}

p {
    position: relative;
    color: #fff;
    font-size: 1.8em;
}

/* ---------------- PARALLAX IMAGE BAR -------------------- */
#image-track>.image {
    width: 40vmin;
    height: 60vmin;
    object-fit: cover;
    object-position: 100% 50%;
}

#image-track {
    display: flex;
    gap: 6vmin;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(0%, -50%);
}

/* --------------- EMBEDDED YOUTUBE VIDEO ---------------- */
.container {
    margin: 0 auto;
    width: 1280px;
    height: 720px;
}

.lesser-title {
        color: #fff;
        text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
        font-size: 2em;
}

/* ----------------------- FOOTER ------------------------ */
footer {
    background-color: #000;
}

.footer-class {
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 0px 30px 20px;
}

.social-icons {
    display: flex;
    justify-content: center;
}

.social-icons a {
    text-decoration: none;
    padding: 15px;
    margin: 10px;
    border-radius: 50%;
    border-color: #ff88f9;
}

.social-icons a {
    font-size: 2em;
    color: rgb(243, 155, 255);
    opacity: 0.9;
}

.social-icons a:hover {
    transition: 0.7s;
    color: #fff;
    text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
}

.footer-bottom {
    display: flex;
    justify-content: center;
    color: #ff88f9;
    padding: 0px 0px 50px;
}

